play video page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "videoadditor",
+  "name": "next-fullstack-imagekit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@imagekit/next": "^2.1.2",
-    "@types/bcryptjs": "^3.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
-    "mongoose": "^8.17.1",
-    "next": "15.4.6",
+    "daisyui": "^5.1.7",
+    "lucide-react": "^0.542.0",
+    "mongoose": "^8.15.1",
+    "next": "15.3.3",
     "next-auth": "^4.24.11",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,7 +27,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
