--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
     "mongoose": "^8.15.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
-    "npm": "^11.6.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "uninstall": "^0.0.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,6 +31,6 @@
     "eslint-config-next": "15.3.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^4.1.12",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
